fix embedded map lg viewport and collapse rawData

--- a/apps/sps-stadnamn-web/src/app/globals.css
+++ b/apps/sps-stadnamn-web/src/app/globals.css
@@ -46,9 +46,6 @@
     accent-color: theme('colors.accent.700') !important;
   }
 
-  h1, .info-content h2 {
-    @apply text-xl sm:text-2xl text-neutral-900 md:text-3xl lg:text-4xl font-serif
-  }
 
 
 
@@ -64,8 +61,12 @@
     @apply py-2;
   }
 
+  h1, .info-content h2 {
+    @apply text-xl sm:text-2xl lg:text-3xl text-neutral-900 md:text-3xl lg:text-4xl font-serif
+  }
+
   .info-content h3 {
-    @apply text-lg sm:text-xl mt-4 text-neutral-900 font-serif;
+    @apply text-lg sm:text-xl lg:text-2xl mt-4 text-neutral-900 font-serif py-2;
   }
 
   .info-content ul {
